[PE] ClipPath should clear tight flag of clip rect

ClipPath in a ClipPaintPropertyNode may clip off pixels within the clip
bounds, so the result clip rect should clear the tight flag.

During raster invalidation, we won't compare non-tight clip rects for
change of clip but will check the changed flag of the clip nodes to
ensure correct raster invalidation.

Bug: 845269
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I41e48e3eb15232d6cf88bd8986df5c3d8075d7db
Reviewed-on: https://chromium-review.googlesource.com/1069671
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560968}
Former-commit-id: f222ad1371257fc742880a2fb512619e036e8b7c