third_party/blink/renderer/platform/graphics/paint/geometry_mapper.cc
@@ -287,12 +287,15 @@ FloatClipRect GeometryMapper::LocalToAncestorClipRect(
   return result;
 }
 
-static const FloatRoundedRect& GetClipRect(
-    const ClipPaintPropertyNode* clip_node,
-    OverlayScrollbarClipBehavior clip_behavior) {
-  return UNLIKELY(clip_behavior == kExcludeOverlayScrollbarSizeForHitTesting)
-             ? clip_node->ClipRectExcludingOverlayScrollbars()
-             : clip_node->ClipRect();
+static FloatClipRect GetClipRect(const ClipPaintPropertyNode* clip_node,
+                                 OverlayScrollbarClipBehavior clip_behavior) {
+  FloatClipRect clip_rect(
+      UNLIKELY(clip_behavior == kExcludeOverlayScrollbarSizeForHitTesting)
+          ? clip_node->ClipRectExcludingOverlayScrollbars()
+          : clip_node->ClipRect());
+  if (clip_node->ClipPath())
+    clip_rect.ClearIsTight();
+  return clip_rect;
 }
 
 FloatClipRect GeometryMapper::LocalToAncestorClipRectInternal(
@@ -310,7 +313,7 @@ FloatClipRect GeometryMapper::LocalToAncestorClipRectInternal(
   if (descendant->Parent() == ancestor_clip &&
       descendant->LocalTransformSpace() == ancestor_transform) {
     success = true;
-    return FloatClipRect(GetClipRect(descendant, clip_behavior));
+    return GetClipRect(descendant, clip_behavior);
   }
 
   FloatClipRect clip;
